Fix Spacing

--- a/resources/css/smartguide/base.css
+++ b/resources/css/smartguide/base.css
@@ -591,6 +591,7 @@ input[type="password"] {
 .chkbxrdio-grp ul {
 	margin-left: 0px;
 	padding-left: 0px;
+	margin-bottom: 0px;
 }
 
 .chkbxrdio-grp li {
